--- a/web/html/main.html
+++ b/web/html/main.html
@@ -42,6 +42,7 @@
         </nav>
     </header>
     <div class="main">
+
         <section class="visual">
             <div class="text">
                 <h2><img src="https://gbksoft.com/img/cases/timewilltell/logo.svg" alt=""></h2>
@@ -53,9 +54,10 @@
                 <img src="https://gbksoft.com/img/cases/timewilltell/title-bg.png" alt="" class="cloud">
             </div>
         </section>
+
         <section class="story-behind">
             <div class="container">
-                <div class="title-area">
+                <div class="main-title-area">
                     <h2>story behind</h2>
                     <div class="lists">
                         <ul>
@@ -120,6 +122,157 @@
                 </div>
             </div>
         </section>
+
+        <!-- hours -->
+        <section class="hours">
+            <div class="wave-img">
+                <img src="https://gbksoft.com/img/cases/timewilltell/white-bg.png" alt="">
+            </div>
+            <h2>
+                <img src="https://gbksoft.com/img/cases/timewilltell/hours.svg" alt="">
+            </h2>
+        </section>
+        <!-- //hours -->
+
+        <!-- Message Capsulation -->
+        <section class="massage-capsulation">
+            <div class="container">
+
+                <div class="mc-txt">
+                    <div class="title-area">
+                        <div class="motion-txt">
+                            <span class="dot"></span>
+                            <span class="dot"></span>
+                            <p>Use Cases</p>
+                        </div>
+                        <h2>Message Capsulation</h2>
+                        <p>
+                            This is the main function of the app. It allows users to create a custom Photo or Video message, set the time
+                            of activation, seal it and send to contacts you want. When the time comes the message will be unsealed so
+                            the recipient could read the letter.
+                        </p>
+                    </div>
+                    <ul class="mc-step">
+                        <li>
+                            <span><img src="https://gbksoft.com/img/cases/timewilltell/01.svg" alt=""></span>
+                            <h3>Create Message</h3>
+                            <p>
+                                The first screen is split in half.
+                                From here you can either create
+                                a text message with a Photo or
+                                supplement your text message
+                                with a short Video. You can
+                                choose to upload content from
+                                your gallery or capture it with
+                                camera.
+                            </p>
+                        </li>
+                        <li>
+                            <span><img src="https://gbksoft.com/img/cases/timewilltell/02.svg" alt=""></span>
+                            <h3>Add People</h3>
+                            <p>
+                                Now you can simply pick people
+                                you want to send the time
+                                capsule from your contact book.
+                                Time Will Tell allows sending
+                                capsulated messages via email.
+                                We also enabled the ability to
+                                send capsules via iMessage in
+                                case user doesn’t know the
+                                email address.
+                            </p>
+                        </li>
+                        <li>
+                            <span><img src="https://gbksoft.com/img/cases/timewilltell/03.svg" alt=""></span>
+                            <h3>Message Delivery</h3>
+                            <p>
+                                The app will generate a unique
+                                link for the capsulated message
+                                upon its creation. This link will be
+                                sent to contacts you choose via
+                                email or iMessage. If your
+                                contacts have the app installed,
+                                they will simply open it.
+                                Otherwise, they will be redirected
+                                to the application page in App
+                                Store.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mc-img">
+                    <img src="https://gbksoft.com/img/cases/timewilltell/tel-mess.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- //Message Capsulation -->
+
+        <!-- Monetization -->
+        <section class="monetization">
+            <div class="container">
+                <div class="monetization-img">
+                    <div class="img1">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-img-1.png" alt="">
+                    </div>
+                    <div class="img2">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-img-2.png" alt="">
+                    </div>
+                    <div class="img3">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-img-3.png" alt="">
+                    </div>
+                    <div class="img4">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-img-4.png" alt="">
+                    </div>
+                    <div class="icon-img1">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic1-left.png" alt="">
+                    </div>
+                    <div class="icon-img2">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic2-left.png" alt="">
+                    </div>
+                    <div class="icon-img3">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic3-left.png" alt="">
+                    </div>
+                    <div class="icon-img4">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic4-left.png" alt="">
+                    </div>
+                    <div class="icon-img5">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic4-right.png" alt="">
+                    </div>
+                    <div class="icon-img6">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic2-right.png" alt="">
+                    </div>
+                    <div class="icon-img7">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic3-right.png" alt="">
+                    </div>
+                    <div class="icon-img8">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic4-right.png" alt="">
+                    </div>
+                </div>
+                <div class="monetization-txt">
+                    <div class="title-area">
+                        <div class="motion-txt">
+                            <span class="dot"></span>
+                            <span class="dot"></span>
+                            <p>Use Cases</p>
+                        </div>
+                        <h2>Monetization</h2>
+                        <p>
+                            Once the message is sent it can’t be changed neither by the
+                            user or the recipient. But sometimes we desperately want to
+                            add something on top of what’s written. Or you may simply
+                            want to delete the capsule before it will be unlocked.<br><br>
+
+                            In such cases, you’ll be required to make an In-App Purchase.
+                            The payment will be required if you want to send two
+                            messages to one recipient. Because, well... everyone should
+                            pay the price to influence the course of time.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //Monetization -->
+
     </div>
 </div>
 </body>
