--- a/web/html/main.html
+++ b/web/html/main.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Acer</title>
 
-    <!--font awesome-->
+    <!--font awesomec-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- google material icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -57,7 +57,7 @@
 
         <section class="story-behind">
             <div class="container">
-                <div class="main-title-area">
+                <div class="title-area01">
                     <h2>story behind</h2>
                     <div class="lists">
                         <ul>
@@ -272,6 +272,204 @@
             </div>
         </section>
         <!-- //Monetization -->
+
+        <!-- Push Notification -->
+        <section class="push-notification">
+            <div class="vibration-img">
+                <img src="https://gbksoft.com/img/cases/timewilltell/notific-block-img.png" alt="">
+            </div>
+            <div class="container">
+
+                <div class="n-txt">
+                    <div class="title-area02">
+                        <div class="motion-txt02">
+                            <span class="dot02"></span>
+                            <span class="dot02"></span>
+                            <p>Use Cases</p>
+                        </div>
+                        <h2>Push Notification</h2>
+                        <p>
+                            We thought it would be a shame if your greetings came late. That’s why we enabled push
+                            notification to make sure that users will read their messages at the appointed day.
+                        </p>
+                        <strong>
+                            There are three cases that trigger notifications:
+                        </strong>
+                    </div>
+                    <div class="notification">
+
+                        <div class="cases">
+                            <div class="case01">
+                                <img src="https://gbksoft.com/img/cases/timewilltell/1.svg" alt="">
+                                <p>
+                                    <span>When the message is activated.</span>
+                                    Recipient of the message gets notification.
+                                </p>
+                            </div>
+                            <div class="case02">
+                                <img src="https://gbksoft.com/img/cases/timewilltell/2.svg" alt="">
+                                <p>
+                                    <b>When the message was sent.</b>
+                                    In this case, if user has the app, the notification will appear.
+                                </p>
+                            </div>
+                            <div class="case03">
+                                <img src="https://gbksoft.com/img/cases/timewilltell/3.svg" alt="">
+                                <p>
+                                    <b>When the message becomes active.</b>
+                                    User that has sent the message gets notification.
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+
+        </section>
+        <!-- //Push Notification -->
+
+        <!-- Wireframes -->
+        <section class="wireframes">
+            <div class="wave-img2">
+                <img src="https://gbksoft.com/img/cases/timewilltell/dark-blue-bg.png" alt="">
+            </div>
+            <div class="container">
+                <div class="title-area03">
+                    <h2>Wireframes</h2>
+                    <p>
+                        We built the app around one main function - message encapsulation. That’s why we kept it<br>
+                        as minimalistic as possible. Time Will Tell features only three tabs:
+                    </p>
+                </div>
+
+                <div class="wireframes-img">
+
+                    <div class="capsulate-message">
+                        <p class="title">Capsulate message.</p>
+                        <p>The first and foremost screen, that is displayed after login.</p>
+                    </div>
+
+                    <div class="profile">
+                        <p class="title">Profile.</p>
+                        <p>Contains basic info about user: Username, Phone Number, Email, etc.</p>
+                    </div>
+
+                    <div class="messages">
+                        <p class="title">Messages.</p>
+                        <p>Contains all messages sent and accepted by user.</p>
+                    </div>
+
+                    <div class="layer-img-btm">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/wiref-layer-bottom.png" alt="">
+                    </div>
+                    
+                    <div class="layer-img-top">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/wiref-layer-top.png" alt="">
+                    </div>
+
+                    <div class="icon01">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic4-left.png" alt="">
+                    </div>
+                    <div class="icon02">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic1-left.png" alt="">
+                    </div>
+                    <div class="icon03">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic3-left.png" alt="">
+                    </div>
+                    <div class="icon04">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic2-left.png" alt="">
+                    </div>
+
+                    <div class="icon05">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic4-right.png" alt="">
+                    </div>
+                    <div class="icon06">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic2-right.png" alt="">
+                    </div>
+                    <div class="icon07">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic1-left.png" alt="">
+                    </div>
+                    <div class="icon08">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/monet-ic2-left.png" alt="">
+                    </div>
+                    
+                </div>
+
+            </div>
+        </section>
+        <!-- //Wireframes -->
+
+        <!-- Logo Evolution -->
+        <section class="evolution">
+
+            <div class="top-evolution">
+                <div class="top-container">
+                    <div class="title-area01">
+                        <h2>Logo Evolution</h2>
+                        <p>
+                            By the time we got to logo, client already had a vision of how it should look
+                            like. He provided us with a rough sketch of what <span>he was thinking about.</span>
+                        </p>
+                    </div>
+                    <div class="visual-clock">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/notebook.png" alt="">
+                        <p class="left-clock">
+                            <img src="https://gbksoft.com/img/cases/timewilltell/w.png" alt="">
+                        </p>
+                        <p class="right-clock">
+                            <img src="https://gbksoft.com/img/cases/timewilltell/clock.png" alt="">
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="visual-card-img clearfix">
+                <div class="left-red-box">
+                    <p class="left-card01">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/card-2.svg" alt="">
+                    </p>
+                    <p class="left-card02">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/card-1.svg" alt="">
+                    </p>
+                </div>
+                <div class="right-red-box">
+                    <p class="right-card01">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/card-4.svg" alt="">
+                    </p>
+                    <p class="right-card02">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/card-3.svg" alt="">
+                    </p>
+                </div>
+            </div>
+
+            <div class="visual-card-txt">
+                <div class="left-ccard-txt01">
+                    <p>
+                        Basically, the concept played around abbreviation of app's name - Time Will Tell - TWT.
+                        We suggested several examples of how these letters could be incorporated into a logo.
+                    </p>
+
+                </div>
+                <div class="right-ccard-txt01">
+                    <p>
+                        Eventually, we decided to take alarm clock as the main character for the logo. Our client
+                        really liked how it followed with the application's main purpose. In addition, the alarm clock
+                        fits perfectly with the letters inside.
+                    </p>
+
+                </div>
+            </div>
+
+
+
+
+        </section>
+        <!-- //Logo Evolution -->
 
     </div>
 </div>
