--- a/web/html/main.html
+++ b/web/html/main.html
@@ -465,11 +465,16 @@
                 </div>
             </div>
 
-
-
-
         </section>
         <!-- //Logo Evolution -->
+
+        <!-- General Style -->
+        <section class="general-style">
+            <div class="title-area01">
+                <h2>General Style</h2>
+            </div>
+        </section>
+        <!-- //General Style -->
 
     </div>
 </div>
