--- a/web/html/main.html
+++ b/web/html/main.html
@@ -145,7 +145,7 @@
                             <span class="dot"></span>
                             <p>Use Cases</p>
                         </div>
-                        <h2>Message Capsulation</h2>
+                        <h3>Message Capsulation</h3>
                         <p>
                             This is the main function of the app. It allows users to create a custom Photo or Video message, set the time
                             of activation, seal it and send to contacts you want. When the time comes the message will be unsealed so
@@ -255,7 +255,7 @@
                             <span class="dot"></span>
                             <p>Use Cases</p>
                         </div>
-                        <h2>Monetization</h2>
+                        <h3>Monetization</h3>
                         <p>
                             Once the message is sent it can’t be changed neither by the
                             user or the recipient. But sometimes we desperately want to
@@ -287,7 +287,7 @@
                             <span class="dot02"></span>
                             <p>Use Cases</p>
                         </div>
-                        <h2>Push Notification</h2>
+                        <h3>Push Notification</h3>
                         <p>
                             We thought it would be a shame if your greetings came late. That’s why we enabled push
                             notification to make sure that users will read their messages at the appointed day.
@@ -469,11 +469,268 @@
 
         <!-- General Style -->
         <section class="general-style">
-            <div class="title-area01">
-                <h2>General Style</h2>
+            <div class="container">
+                <div class="title-area01">
+                    <h2>General Style</h2>
+                </div>
+                
+                <div class="gs-left">
+                    <div class="title-area">
+                        <div class="motion-txt">
+                            <span class="dot"></span>
+                            <span class="dot"></span>
+                        </div>
+                        <h3>Icons of Tab Bar</h3>
+                        <p>
+                            The client asked us to adhere to Flat Design principles. He also provided us with design
+                            references, so we found a common ground right from the start. In particular, we have
+                            created linear styled icons according to the client’s preferences.
+                        </p>
+                    </div>
+                    <div class="title-area w450">
+                        <div class="motion-txt">
+                            <span class="dot"></span>
+                            <span class="dot"></span>
+                        </div>
+                        <h3>Color Palette</h3>
+                        <p>
+                            In order to design a color scheme, we thought about the feeling
+                            people usually experience while reading greetings from the loved
+                            ones. We realized that our app should convey the exact same
+                            emotions. Therefore, we chose “happy” gradient from yellow to
+                            orange as a color scheme for Time Will Tell.
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="gs-right">
+                    <div class="phone-img">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/tel-1-style.png" alt="">
+                    </div>
+                    <div class="phone-layer-img">
+                        <img src="https://gbksoft.com/img/cases/timewilltell/tel-2-style.png" alt="">
+                    </div>
+                </div>
+
+                <div class="color-palette">
+                    <ul>
+                        <li>
+                            <div class="color01">
+                                <div class="palette">
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/fede63.png" alt="">
+                                    <p class="num">1</p>
+                                </div>
+                                <div class="move-img">
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/color-1.svg" alt="">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="color02">
+                                <div class="palette">
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/f88667.png" alt="">
+                                    <p class="num">2</p>
+                                </div>
+                                <div class="move-img">
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/color-1.svg" alt="">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="color03">
+                                <div class="palette">
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/f4483c.png" alt="">
+                                    <p class="num">3</p>
+                                </div>
+                                <div class="move-img">
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/color-1.svg" alt="">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="color04">
+                                <div class="palette">
+                                    <p class="num">4</p>
+                                </div>
+                                <div class="move-img">
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/color-1.svg" alt="">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+
             </div>
+
+
         </section>
         <!-- //General Style -->
+
+        <!-- Technologies -->
+        <section class="technologies">
+            <div class="wave-img3">
+                <img src="https://gbksoft.com/img/cases/timewilltell/gray-bg.png" alt="">
+            </div>
+            <div class="container">
+                <div class="title-area01">
+                    <h2>Technologies</h2>
+                    <h3>Development</h3>
+                </div>
+                <div class="layer-text-box">
+                    <div class="white-box01">
+                        <div class="white-small-box01">
+                            <span>PHP 5.5.9</span>
+                            Yii2<br>
+                            Wordpress
+                        </div>
+                        <div class="white-small-box02">
+                            <span>WebServer</span>
+                            Apache2
+                        </div>
+                        <div class="white-small-box03">
+                            <span>MySQL 5.6</span>
+                        </div>
+                    </div>
+                    <div class="white-box02">
+                        <div class="white-small-box01">
+                            <span>Swift 2.3</span>
+                            Alamofire<br>
+                            Crashlytics<br>
+                            PBJVideoPlayer<br>
+                            Fabric
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="red-box-layer">
+                    <div class="red-box red-small-box01">
+                        Apple Push Notification Service
+                    </div>
+                    <div class="red-box red-small-box02">
+                        Apple In-App Purchases
+                    </div>
+                    <div class="red-box red-small-box03">
+                        iMessage
+                    </div>
+                    <div class="red-box red-small-box04">
+                        AWS EC2
+                    </div>
+                    <div class="red-box red-small-box05">
+                        IOS
+                    </div>
+                    <div class="red-box red-small-box06">
+                        AWS Transcoder
+                    </div>
+                    <div class="red-box red-small-box07">
+                        AWS S3
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- //Technologies -->
+
+        <!-- Features -->
+        <section class="features">
+            <div class="container">
+                <div class="title-area03">
+                    <h2>Features</h2>
+                </div>
+                <div class="features-items">
+                    <ul>
+                        <li>
+                            <div class="item">
+                                <span>
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/featur-item-1.svg" alt="">
+                                </span>
+                                <p>
+                                    Photo & Video<br>
+                                    Attachments
+                                </p>
+                                <p class="bg-layer"></p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <span>
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/featur-item-2.svg" alt="">
+                                </span>
+                                <p>
+                                    iMessage Integration
+                                </p>
+                                <p class="bg-layer"></p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <span>
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/featur-item-3.svg" alt="">
+                                </span>
+                                <p>
+                                    Delayed Message<br>
+                                    Activation
+                                </p>
+                                <p class="bg-layer"></p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <span>
+                                    <img src="https://gbksoft.com/img/cases/timewilltell/featur-item-4.svg" alt="">
+                                </span>
+                                <p>
+                                    Contact Book<br>
+                                    Integration
+                                </p>
+                                <p class="bg-layer"></p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- //Features -->
+
+        <!-- Feedback -->
+        <section class="feedback">
+            <div class="container">
+                <div class="title-area03">
+                    <h2>Feedback</h2>
+                </div>
+                <div class="feedback-txt-box">
+                    <p class="quote-start"><img src="https://gbksoft.com/img/cases/timewilltell/quote-start.svg" alt=""></p>
+                    <p class="feedback-txt">
+                        Currently, we are adding final touches to the project. Time Will Tell will be
+                        available in App Store soon, so you could test it out for yourself. We can't wait to
+                        make the final release and hope to get a positive feedback from our client.
+                    </p>
+                    <p class="quote-end"><img src="https://gbksoft.com/img/cases/timewilltell/quote-end.svg" alt=""></p>
+                </div>
+            </div>
+
+            <div class="feedback-vs">
+                <img src="https://gbksoft.com/img/cases/timewilltell/feedback-bg.png" alt="">
+            </div>
+        </section>
+        <!-- //Feedback -->
+
+        <!-- Idea -->
+        <section class="idea">
+            <div class="container">
+                <div class="title-area01">
+                    <h2>You Have an Idea?</h2>
+                </div>
+                <div class="btn-area">
+                    <a href="#" class="btn01">Discuss My Idea</a>
+                    <a href="#" class="btn02">Crashtest it</a>
+                </div>
+            </div>
+
+        </section>
+        <!-- //Idea -->
+
 
     </div>
 </div>
