--- a/web/html/main.html
+++ b/web/html/main.html
@@ -31,7 +31,10 @@
     <!--[end if]-->
 </head>
 <body class="">
+<!-- wrap -->
 <div id="wrap">
+
+    <!-- header -->
     <header class="header">
        <h1 class="logo">
            <a href="#">twt</a>
@@ -41,8 +44,12 @@
             <a href="#" class="link">service</a>
         </nav>
     </header>
+    <!-- //header -->
+
+    <!-- main -->
     <div class="main">
 
+        <!-- main visual -->
         <section class="visual">
             <div class="text">
                 <h2><img src="https://gbksoft.com/img/cases/timewilltell/logo.svg" alt=""></h2>
@@ -54,7 +61,9 @@
                 <img src="https://gbksoft.com/img/cases/timewilltell/title-bg.png" alt="" class="cloud">
             </div>
         </section>
+        <!-- //main visual -->
 
+        <!-- Story behind -->
         <section class="story-behind">
             <div class="container">
                 <div class="title-area01">
@@ -122,6 +131,7 @@
                 </div>
             </div>
         </section>
+        <!-- //Story behind -->
 
         <!-- hours -->
         <section class="hours">
@@ -731,8 +741,71 @@
         </section>
         <!-- //Idea -->
 
-
     </div>
+    <!-- //main -->
+
+    <!-- footer -->
+     <footer class="footer">
+         <div class="top-footer">
+             <div class="company-info">
+                 <h1 class="logo02">
+                     <a href="#"><img src="https://gbksoft.com/img/footer-logo.svg" alt=""></a>
+                 </h1>
+                 <p class="copyright">
+                     GBKSOFT – outsourcing web and mobile
+                     application development company
+                 </p>
+                 <p class="policy"><a href="#">Privacy Policy</a></p>
+             </div>
+             <div class="app-links">
+                 <ul>
+                     <li><a href="#"><img src="https://gbksoft.com/img/footer-other-logo-img1.png" alt=""></a></li>
+                     <li><a href="#"><img src="https://gbksoft.com/img/footer-other-logo-img2.png" alt=""></a></li>
+                     <li><a href="#"><img src="https://gbksoft.com/img/footer-other-logo-img3.png" alt=""></a></li>
+                     <li><a href="#"><img src="https://gbksoft.com/img/footer-other-logo-img4.png" alt=""></a></li>
+                 </ul>
+             </div>
+         </div>
+
+         <div class="btm-footer">
+            <ul class="links">
+                <li class="overview">
+                    <p>Overview</p>
+                    <a href="#" class="link">Home</a>
+                    <a href="#" class="link">Our story</a>
+                    <a href="#" class="link">Portfolio</a>
+                    <a href="#" class="link">Blog</a>
+                    <a href="#" class="link">FAQ</a>
+                    <a href="#" class="link">Contacts</a>
+                </li>
+                <li class="development">
+                    <p>Development</p>
+                    <a href="#" class="link">Web</a>
+                    <a href="#" class="link">Mobile</a>
+                    <a href="#" class="link">iOS</a>
+                    <a href="#" class="link">Android</a>
+                    <a href="#" class="link">Wearable</a>
+                    <a href="#" class="link">Design</a>
+                </li>
+                <li class="affiliate-program">
+                    <p>Affiliate program</p>
+                    <a href="#" class="link">For sales manager</a>
+                    <a href="#" class="link">For partners</a>
+                </li>
+                <li class="contact-us">
+                    <div class="contact">
+                        <p>Contact Us</p>
+                        <a href="#" class="link">+1 631 822 0034</a>
+                        <a href="#" class="link">hello@gbksoft.com</a>
+                    </div>
+                </li>
+            </ul>
+         </div>
+
+     </footer>
+    <!-- //footer -->
+
 </div>
+<!-- //wrap -->
 </body>
 </html>
